<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ryhma4.taskimatti.activity.CreateRoutineActivity"
    tools:showIn="@layout/activity_create_routine">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/createRoutineLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:textColor="@color/primaryTextColor">

            <EditText
                android:id="@+id/inputRoutineName"
                style="@android:style/Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:ems="10"
                android:hint="@string/param_name"
                android:inputType="text|textCapSentences|textPersonName" />

            <LinearLayout
                android:id="@+id/typeLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/inputRoutineType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:completionHint="Tyyppi"
                    android:hint="@string/param_type"
                    android:inputType="text|textCapSentences|textPersonName"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/dropdownType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/repeatLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible"
                tools:layout_editor_absoluteX="172dp">

                <TextView
                    android:id="@+id/txtRepeat"
                    android:layout_width="20sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/param_repeat"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/numTimes"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_frequency"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="20sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"
                    android:gravity="center_vertical"
                    android:text="x"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/dropdownInterval"
                    android:layout_width="50sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkSameTasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/text_all_tasks_are_same" />

            <LinearLayout
                android:id="@+id/durationLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtDuration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/param_duration"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/inputHours"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/time_hours"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/inputMinutes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/time_Minutes"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/descriptionLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="260sp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inputDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:enabled="true"
                    android:gravity="top"
                    android:hint="@string/param_description"
                    android:inputType="textMultiLine|textCapSentences"
                    android:isScrollContainer="true"
                    android:overScrollMode="always"
                    android:padding="10sp"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/editDeleteBtnLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnEditRoutine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="15sp"
            app:backgroundTint="#34a853"
            android:src="@drawable/ic_check_black_24dp"
            />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btnDeleteRoutine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="15sp"
            app:backgroundTint="#ea4335"
            android:src="@drawable/ic_delete_black_24dp"
            />

    </FrameLayout>

</RelativeLayout>

