<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editDeleteBtnLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|end"
    android:elevation="5dp">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnSaveRoutine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:foregroundGravity="bottom|right"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        android:elevation="6dp"
        app:backgroundTint="@color/primaryColor"
        app:srcCompat="@drawable/ic_arrow_forward_black_24dp" />

</FrameLayout>