<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:title="@string/pref_title_weekly_reminder"
        android:key="pref_screen_weekly_reminder"
        android:persistent="true">
        <ListPreference
            android:title="@string/pref_title_weekly_reminder"
            android:key="weekly_reminder_date"
            android:selectable="true"
            android:enabled="true"
            android:entries="@array/notification_week_dates"
            android:entryValues="@array/notification_week_date_values"
            />
        <com.example.ryhma4.taskimatti.notification.TimePreference
            android:title="@string/time_time"
            android:summary="@string/time_time"
            android:key="weekly_reminder_time"
            android:dependency="weekly_reminder_date"
            />
    </PreferenceScreen>

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

</PreferenceScreen>
